--- a/index.html
+++ b/index.html
@@ -1,1 +1,5 @@
-<center><h1>Hello world<h1><center/>
+
+
+<body background="f.jpg">
+	<br><br><br><br><br><br>
+<FONT COLOR="white"><center><h1>Hello world<h1><center/></center><font>
