--- a/index.html
+++ b/index.html
@@ -2,4 +2,8 @@
 
 <body background="f.jpg">
 	<br><br><br><br><br><br>
-<FONT COLOR="white"><center><h1>Hello world<h1><center/></center><font>
+<FONT COLOR="white"><center><h1><font face=”Algerian”>Hello world </font><h1></center></font>
+	<br><br><br><br>
+
+<center><img src="L.png"></center>
+<br>
