--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 
 <body background="f.jpg">
 	<br><br><br><br><br><br>
-<FONT COLOR="white"><center><h1><font face=”Algerian”>Hello world </font><h1></center></font>
+<FONT COLOR="Black"><center> <FONT SIZE=450><b> Hello world </b></FONT></center>
 	<br><br><br><br>
 
-<center><img src="L.png"></center>
+
 <br>
+
+<center><img src="T.png" width="800" height="500" /></center>
